--- a/module2/pyproject.toml
+++ b/module2/pyproject.toml
@@ -11,6 +11,7 @@ pandas = "^3.0.0"
 scikit-learn = "^1.8.0"
 pydantic-settings = "^2.12.0"
 loguru = "^0.7.3"
+sqlalchemy = "^2.0.46"
 
 
 [build-system]
